--- a/hello_stm32l0.ioc
+++ b/hello_stm32l0.ioc
@@ -9,25 +9,29 @@ Mcu.IP0=I2C1
 Mcu.IP1=NVIC
 Mcu.IP2=RCC
 Mcu.IP3=SYS
-Mcu.IPNb=4
+Mcu.IP4=TIM2
+Mcu.IPNb=5
 Mcu.Name=STM32L010F4Px
 Mcu.Package=TSSOP20
-Mcu.Pin0=PA4
-Mcu.Pin1=PA9
-Mcu.Pin2=PA10
-Mcu.Pin3=VP_SYS_VS_Systick
-Mcu.PinsNb=4
+Mcu.Pin0=PA0-CK_IN
+Mcu.Pin1=PA4
+Mcu.Pin2=PA9
+Mcu.Pin3=PA10
+Mcu.Pin4=VP_SYS_VS_Systick
+Mcu.Pin5=VP_TIM2_VS_ClockSourceINT
+Mcu.PinsNb=6
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L010F4Px
-MxCube.Version=6.3.0
-MxDb.Version=DB.6.0.30
+MxCube.Version=6.4.0
+MxDb.Version=DB.6.0.40
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.SVC_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.SysTick_IRQn=true\:3\:0\:false\:false\:true\:false\:true
+PA0-CK_IN.Signal=S_TIM2_CH1
 PA10.Mode=I2C
 PA10.Signal=I2C1_SDA
 PA4.Locked=true
@@ -63,7 +67,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_I2C1_Init-I2C1-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_I2C1_Init-I2C1-false-HAL-true,4-MX_TIM2_Init-TIM2-false-HAL-true
 RCC.ADCFreq_Value=4000000
 RCC.AHBFreq_Value=4000000
 RCC.APB1Freq_Value=4000000
@@ -78,15 +82,14 @@ RCC.HSI16_VALUE=16000000
 RCC.HSIRCDiv=4
 RCC.HSI_VALUE=4000000
 RCC.I2C1Freq_Value=4000000
-RCC.IPParameters=ADCFreq_Value,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI16_VALUE,HSIRCDiv,HSI_VALUE,I2C1Freq_Value,LPTIMFreq_Value,LPUARTFreq_Value,LSE_VALUE,LSI_VALUE,MCOPinFreq_Value,MSI_VALUE,PLLCLKFreq_Value,PLLMUL,PWRFreq_Value,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,TIMFreq_Value,TimerFreq_Value,USART2Freq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,WatchDogFreq_Value
+RCC.IPParameters=ADCFreq_Value,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI16_VALUE,HSIRCDiv,HSI_VALUE,I2C1Freq_Value,LPTIMFreq_Value,LPUARTFreq_Value,LSE_VALUE,LSI_VALUE,MCOPinFreq_Value,MSI_VALUE,PLLCLKFreq_Value,PWRFreq_Value,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,TIMFreq_Value,TimerFreq_Value,USART2Freq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,WatchDogFreq_Value
 RCC.LPTIMFreq_Value=4000000
 RCC.LPUARTFreq_Value=4000000
 RCC.LSE_VALUE=32768
 RCC.LSI_VALUE=37000
 RCC.MCOPinFreq_Value=4000000
 RCC.MSI_VALUE=2097000
-RCC.PLLCLKFreq_Value=8000000
-RCC.PLLMUL=RCC_PLLMUL_4
+RCC.PLLCLKFreq_Value=6000000
 RCC.PWRFreq_Value=4000000
 RCC.RTCFreq_Value=37000
 RCC.RTCHSEDivFreq_Value=4000000
@@ -96,9 +99,19 @@ RCC.TIMFreq_Value=4000000
 RCC.TimerFreq_Value=4000000
 RCC.USART2Freq_Value=4000000
 RCC.VCOInputFreq_Value=4000000
-RCC.VCOOutputFreq_Value=16000000
+RCC.VCOOutputFreq_Value=12000000
 RCC.WatchDogFreq_Value=37000
+SH.S_TIM2_CH1.0=TIM2_CH1,PWM Generation1 CH1
+SH.S_TIM2_CH1.ConfNb=1
+TIM2.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
+TIM2.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
+TIM2.ClockDivision=TIM_CLOCKDIVISION_DIV1
+TIM2.IPParameters=Channel-PWM Generation1 CH1,Prescaler,Period,ClockDivision,AutoReloadPreload
+TIM2.Period=39999
+TIM2.Prescaler=1
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM2_VS_ClockSourceINT.Mode=Internal
+VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
 board=custom
 isbadioc=false
