--- a/hello_stm32l0.ioc
+++ b/hello_stm32l0.ioc
@@ -2,7 +2,7 @@
 File.Version=6
 I2C1.I2C_Speed_Mode=I2C_Fast
 I2C1.IPParameters=Timing,I2C_Speed_Mode
-I2C1.Timing=0x00000004
+I2C1.Timing=0x00200C28
 KeepUserPlacement=false
 Mcu.Family=STM32L0
 Mcu.IP0=I2C1
@@ -14,12 +14,20 @@ Mcu.IPNb=5
 Mcu.Name=STM32L010F4Px
 Mcu.Package=TSSOP20
 Mcu.Pin0=PA0-CK_IN
-Mcu.Pin1=PA4
-Mcu.Pin2=PA9
-Mcu.Pin3=PA10
-Mcu.Pin4=VP_SYS_VS_Systick
-Mcu.Pin5=VP_TIM2_VS_ClockSourceINT
-Mcu.PinsNb=6
+Mcu.Pin1=PA1
+Mcu.Pin10=PA10
+Mcu.Pin11=VP_SYS_VS_Systick
+Mcu.Pin12=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin13=VP_TIM2_VS_no_output1
+Mcu.Pin2=PA2
+Mcu.Pin3=PA3
+Mcu.Pin4=PA4
+Mcu.Pin5=PA5
+Mcu.Pin6=PA6
+Mcu.Pin7=PA7
+Mcu.Pin8=PB1
+Mcu.Pin9=PA9
+Mcu.PinsNb=14
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L010F4Px
@@ -31,14 +39,30 @@ NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.SVC_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.SysTick_IRQn=true\:3\:0\:false\:false\:true\:false\:true
-PA0-CK_IN.Signal=S_TIM2_CH1
+NVIC.TIM2_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+PA0-CK_IN.Locked=true
+PA0-CK_IN.Signal=GPIO_Output
+PA1.Locked=true
+PA1.Signal=GPIO_Output
 PA10.Mode=I2C
 PA10.Signal=I2C1_SDA
+PA2.Locked=true
+PA2.Signal=GPIO_Output
+PA3.Locked=true
+PA3.Signal=GPIO_Output
 PA4.Locked=true
 PA4.Signal=GPIO_Output
+PA5.Locked=true
+PA5.Signal=GPIO_Output
+PA6.Locked=true
+PA6.Signal=GPIO_Output
+PA7.Locked=true
+PA7.Signal=GPIO_Output
 PA9.Locked=true
 PA9.Mode=I2C
 PA9.Signal=I2C1_SCL
+PB1.Locked=true
+PB1.Signal=S_TIM2_CH4
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
@@ -68,50 +92,50 @@ ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
 ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_I2C1_Init-I2C1-false-HAL-true,4-MX_TIM2_Init-TIM2-false-HAL-true
-RCC.ADCFreq_Value=4000000
-RCC.AHBFreq_Value=4000000
-RCC.APB1Freq_Value=4000000
-RCC.APB1TimFreq_Value=4000000
-RCC.APB2Freq_Value=4000000
-RCC.APB2TimFreq_Value=4000000
-RCC.FCLKCortexFreq_Value=4000000
+RCC.ADCFreq_Value=16000000
+RCC.AHBFreq_Value=24000000
+RCC.APB1Freq_Value=24000000
+RCC.APB1TimFreq_Value=24000000
+RCC.APB2Freq_Value=24000000
+RCC.APB2TimFreq_Value=24000000
+RCC.FCLKCortexFreq_Value=24000000
 RCC.FamilyName=M
-RCC.HCLKFreq_Value=4000000
+RCC.HCLKFreq_Value=24000000
 RCC.HSE_VALUE=8000000
 RCC.HSI16_VALUE=16000000
-RCC.HSIRCDiv=4
-RCC.HSI_VALUE=4000000
-RCC.I2C1Freq_Value=4000000
-RCC.IPParameters=ADCFreq_Value,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI16_VALUE,HSIRCDiv,HSI_VALUE,I2C1Freq_Value,LPTIMFreq_Value,LPUARTFreq_Value,LSE_VALUE,LSI_VALUE,MCOPinFreq_Value,MSI_VALUE,PLLCLKFreq_Value,PWRFreq_Value,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,TIMFreq_Value,TimerFreq_Value,USART2Freq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,WatchDogFreq_Value
-RCC.LPTIMFreq_Value=4000000
-RCC.LPUARTFreq_Value=4000000
+RCC.HSI_VALUE=16000000
+RCC.I2C1Freq_Value=24000000
+RCC.IPParameters=ADCFreq_Value,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI16_VALUE,HSI_VALUE,I2C1Freq_Value,LPTIMFreq_Value,LPUARTFreq_Value,LSE_VALUE,LSI_VALUE,MCOPinFreq_Value,MSI_VALUE,PLLCLKFreq_Value,PWRFreq_Value,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,TIMFreq_Value,TimerFreq_Value,USART2Freq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,WatchDogFreq_Value
+RCC.LPTIMFreq_Value=24000000
+RCC.LPUARTFreq_Value=24000000
 RCC.LSE_VALUE=32768
 RCC.LSI_VALUE=37000
-RCC.MCOPinFreq_Value=4000000
+RCC.MCOPinFreq_Value=24000000
 RCC.MSI_VALUE=2097000
-RCC.PLLCLKFreq_Value=6000000
-RCC.PWRFreq_Value=4000000
+RCC.PLLCLKFreq_Value=24000000
+RCC.PWRFreq_Value=24000000
 RCC.RTCFreq_Value=37000
 RCC.RTCHSEDivFreq_Value=4000000
-RCC.SYSCLKFreq_VALUE=4000000
-RCC.SYSCLKSource=RCC_SYSCLKSOURCE_HSI
-RCC.TIMFreq_Value=4000000
-RCC.TimerFreq_Value=4000000
-RCC.USART2Freq_Value=4000000
-RCC.VCOInputFreq_Value=4000000
-RCC.VCOOutputFreq_Value=12000000
+RCC.SYSCLKFreq_VALUE=24000000
+RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
+RCC.TIMFreq_Value=24000000
+RCC.TimerFreq_Value=24000000
+RCC.USART2Freq_Value=24000000
+RCC.VCOInputFreq_Value=16000000
+RCC.VCOOutputFreq_Value=48000000
 RCC.WatchDogFreq_Value=37000
-SH.S_TIM2_CH1.0=TIM2_CH1,PWM Generation1 CH1
-SH.S_TIM2_CH1.ConfNb=1
+SH.S_TIM2_CH4.0=TIM2_CH4
+SH.S_TIM2_CH4.ConfNb=1
 TIM2.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
-TIM2.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
-TIM2.ClockDivision=TIM_CLOCKDIVISION_DIV1
-TIM2.IPParameters=Channel-PWM Generation1 CH1,Prescaler,Period,ClockDivision,AutoReloadPreload
-TIM2.Period=39999
-TIM2.Prescaler=1
+TIM2.Channel-Output\ Compare1\ No\ Output=TIM_CHANNEL_1
+TIM2.IPParameters=Prescaler,Period,AutoReloadPreload,Channel-Output Compare1 No Output
+TIM2.Period=19999
+TIM2.Prescaler=0
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM2_VS_ClockSourceINT.Mode=Internal
 VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
+VP_TIM2_VS_no_output1.Mode=Output Compare1 No Output
+VP_TIM2_VS_no_output1.Signal=TIM2_VS_no_output1
 board=custom
 isbadioc=false
