--- a/hello_stm32l0.ioc
+++ b/hello_stm32l0.ioc
@@ -40,22 +40,38 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.SVC_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.SysTick_IRQn=true\:3\:0\:false\:false\:true\:false\:true
 NVIC.TIM2_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+PA0-CK_IN.GPIOParameters=GPIO_Label
+PA0-CK_IN.GPIO_Label=LowA
 PA0-CK_IN.Locked=true
 PA0-CK_IN.Signal=GPIO_Output
+PA1.GPIOParameters=GPIO_Label
+PA1.GPIO_Label=LowC
 PA1.Locked=true
 PA1.Signal=GPIO_Output
 PA10.Mode=I2C
 PA10.Signal=I2C1_SDA
+PA2.GPIOParameters=GPIO_Label
+PA2.GPIO_Label=LowB
 PA2.Locked=true
 PA2.Signal=GPIO_Output
+PA3.GPIOParameters=GPIO_Label
+PA3.GPIO_Label=LowD
 PA3.Locked=true
 PA3.Signal=GPIO_Output
+PA4.GPIOParameters=GPIO_Label
+PA4.GPIO_Label=HighA
 PA4.Locked=true
 PA4.Signal=GPIO_Output
+PA5.GPIOParameters=GPIO_Label
+PA5.GPIO_Label=HighC
 PA5.Locked=true
 PA5.Signal=GPIO_Output
+PA6.GPIOParameters=GPIO_Label
+PA6.GPIO_Label=HighB
 PA6.Locked=true
 PA6.Signal=GPIO_Output
+PA7.GPIOParameters=GPIO_Label
+PA7.GPIO_Label=HighD
 PA7.Locked=true
 PA7.Signal=GPIO_Output
 PA9.Locked=true
